# competitive_programming

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json  run_tests.sh  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: ordered_set.hpp  segtree.hpp
test/: segtree_tests.cpp
